@@ -79,38 +79,15 @@
             <version>1.2.69</version>
         </dependency>
         <!-- des aes 相关-->
-        <dependency>
-            <groupId>org.puristframework.boot</groupId>
-            <artifactId>purist-boot-core-crypto</artifactId>
-            <version>1.2.2.RC-M38</version>
-        </dependency>
-
-
-
 <!--        <dependency>-->
-
-<!--            <groupId>javax.xml.bind</groupId>-->
-
-<!--            <artifactId>jaxb-api</artifactId>-->
-
-<!--            <version>2.4.0-b180725.0427</version>-->
-
+<!--            <groupId>org.puristframework.boot</groupId>-->
+<!--            <artifactId>purist-boot-core-crypto</artifactId>-->
+<!--            <version>1.2.2.RC-M38</version>-->
 <!--        </dependency>-->
-    </dependencies>
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>11</source>
-                    <target>11</target>
-                    <compilerArgs>
-                        <arg>--add-exports=java.base/com.sun.crypto.provider=ALL-UNNAMED</arg>
-                    </compilerArgs>
-                </configuration>
 
-            </plugin>
-        </plugins>
-    </build>
+
+
+
+    </dependencies>
+
 </project>
